// Copyright 2016 The Cartographer Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "cartographer/mapping/proto/3d/probability_grid_range_data_inserter_options_3d.proto";
import "cartographer/mapping/proto/3d/tsdf_range_data_inserter_options_3d.proto";

package cartographer.mapping.proto;

message RangeDataInserterOptions3D {
  enum RangeDataInserterType3D {
    INVALID_INSERTER = 0;
    PROBABILITY_GRID_INSERTER_3D = 1;
    TSDF_INSERTER_3D = 2;
  }

  RangeDataInserterType3D range_data_inserter_type = 1;
  ProbabilityGridRangeDataInserterOptions3D
      probability_grid_range_data_inserter_options_3d = 2;
  TSDFRangeDataInserterOptions3D tsdf_range_data_inserter_options_3d = 3;
}
